# routing-framework

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct
Algorithms/BCH/: BucketEntry.h  DynamicBucketContainer.h
Algorithms/Buckets/: BCCHBucketBuilder.h  BCCHClosestPoiQuery.h  BCHBucketBuilder.h  BCHClosestPoiQuery.h  BucketBuilder.h  BucketClosestPoiQuery.h  StaticBucketContainer.h
Algorithms/CCH/: CCH.h  CCHClosestPoiQuery.h  CCHMetric.h  EliminationTreeQuery.h  EliminationTreeUpwardSearch.h  UpwardEliminationTreeSearch.h
Algorithms/CH/: CH.h  CHConversion.h  CHPathUnpacker.h  CHPreprocessing.h  CHQuery.h  ContractionHierarchy.h
Algorithms/DemandCalculation/: CCHOpportunityChooser.h  ChooserDemandCalculator.h  DijkstraOpportunityChooser.h  FormulaDemandCalculator.h  KDTreeOpportunityChooser.h  PopulationAssignment.h
Algorithms/Dijkstra/: BiDijkstra.h  DagShortestPaths.h  Dijkstra.h  DijkstraClosestPoiQuery.h
Algorithms/GraphTraversal/: DepthFirstSearch.h  DfsNumbering.h  StronglyConnectedComponents.h
Algorithms/Partitioning/: RecursiveBisection.h
Algorithms/TrafficAssignment/: AllOrNothingAssignment.h  FrankWolfeAssignment.h  UnivariateMinimization.h
Algorithms/TrafficAssignment/Adapters/: BiDijkstraAdapter.h  CCHAdapter.h  CHAdapter.h  DijkstraAdapter.h
Algorithms/TrafficAssignment/ObjectiveFunctions/: SystemOptimum.h  UserEquilibrium.h
Algorithms/TrafficAssignment/TravelCostFunctions/: BprFunction.h  DavidsonFunction.h  InverseFunction.h  ModifiedDavidsonFunction.h
Algorithms/TrafficAssignment/TraversalCostFunctions/: InverseFunction.h  ModifiedDavidsonFunction.h
Algorithms/TripEstimation/: PopulationAssignment.h
DataStructures/Containers/: BitVector.h  ConcurrentLocalIdMap.h  LocalIdMap.h  Subset.h
DataStructures/DistanceLabels/: StampedDistanceLabelContainer.h
DataStructures/Geometry/: Area.h  CoordinateConversion.h  CoordinateTransformation.h  Helpers.h  KDTree.h  LatLng.h  Point.h  PointSet.h  Polygon.h  Rectangle.h
DataStructures/Geometry/KdTree/: DynamicKdTree.h  StaticKdTree.h
DataStructures/Geometry/KdTree/Adapters/: PointSetAdapter.h  PointSubsetAdapter.h
DataStructures/Geometry/KdTree/Metrics/: EuclideanMetric.h  ManhattanMetric.h
DataStructures/Geometry/KdTree/ResultSets/: CircularRangeResultSet.h
DataStructures/Geometry/SummedAreaTables/: OctagonalSummedAreaTable.h
DataStructures/Graph/: Graph.h
DataStructures/Graph/Attributes/: AbstractAttribute.h  AbstractBitAttribute.h  CapacityAttribute.h  CoordinateAttribute.h  EdgeIdAttribute.h  EdgeTailAttribute.h  FreeFlowSpeedAttribute.h  LatLngAttribute.h  LengthAttribute.h  NumLanesAttribute.h  NumOpportunitiesAttribute.h  OsmRoadCategoryAttribute.h  PopulationAttribute.h  RoadGeometryAttribute.h  RoutingCostAttribute.h  SequentialVertexIdAttribute.h  SpeedLimitAttribute.h  TrafficFlowAttribute.h  TravelCostAttribute.h  TravelTimeAttribute.h  TraversalCostAttribute.h  UnpackingInfoAttribute.h  VertexIdAttribute.h  WayIdAttribute.h  XatfRoadCategoryAttribute.h
DataStructures/Graph/Export/: DefaultExporter.h
DataStructures/Graph/Import/: DimacsImporter.h  MatSimImporter.h  OsmImporter.h  VisumImporter.h  XatfImporter.h
DataStructures/Labels/: AvxLabelSet.h  BasicLabelSet.h  ParentInfo.h  SimdLabelSet.h  SseLabelSet.h
DataStructures/Labels/Containers/: ParentLabelContainer.h  SimpleDistanceLabelContainer.h  StampedDistanceLabelContainer.h
DataStructures/Partitioning/: SeparatorDecomposition.h  SeparatorTree.h
DataStructures/Queues/: AddressableKHeap.h  TournamentTree.h
DataStructures/Utilities/: DynamicRagged2DArrays.h  Matrix.h  OriginDestination.h  Permutation.h  UnionFind.h
Experiments/: ODPairGenerator.h
Launchers/: AssignTraffic.cc  AssignTraffic.cpp  CMakeLists.txt  CalculateDemand.cc  CalculateDemand.cpp  RunP2PAlgo.cc  RunP2PAlgo.cpp  RunPoiAlgo.cc  SConscript
Publications/DemandCalculation/GIS19/: RunExperiments
Publications/DemandCalculation/SIGSPATIAL19/: RunExperiments
Publications/FastTA/ALENEX18/: ConductP2P  ConductTA  PrepareP2P  PrepareTA
Publications/FastTA/JEA/: ConductManyCoreExperiments  ConductP2P  ConductTA  DrawNetworks  ParameterTests  PrepareP2P  PrepareTA
Publications/FastTA/SEA18/: ConductP2P  ConductTA  ParameterTests  PrepareP2P  PrepareTA
Publications/NearestNeighbors/SEA21/: RunExperiments
RawData/: CMakeLists.txt  CalibrateOsm.cpp  ComputeDijkstraRanks.cpp  ComputeDistances.cc  ComputeDistances.cpp  ComputeUnionBoundary.cc  ComputeUnionBoundary.cpp  ConvertGraph.cc  ConvertGraph.cpp  DrawNetwork.cpp  GenerateMatchingODPairs.cc  GenerateMatchingODPairs.cpp  GenerateODPairs.cc  GenerateODPairs.cpp  MeanDistancePerRank.cc  OsmComputeUnionOfBoundaries.py  ParseMobiTopp.cpp  ParseMobiToppFile.cpp  ParseMtxFile.cpp  RadiationModel.cc  RadiationModel.cpp  SConscript  SimplifyOsmPolyFile.py  VisumExtractPoi.cc  VisumExtractPoi.cpp  VisumExtractTables.py  XatfMergeCountries.py
RawData/Stuttgart/: DrawStuttgart.cpp  SConscript
RawData/Visum/: Surface.h  ZonePolygons.h
Stats/TrafficAssignment/: AllOrNothingAssignmentStats.h  FrankWolfeAssignmentStats.h
Tools/: BinaryIO.h  Bitwise.h  CommandLineParser.h  CompilerSpecific.h  ConcurrentHelpers.h  Constants.h  ContainerHelpers.h  DateHelpers.h  EnumParser.h  LexicalCast.h  MachineSpecs.h  Math.h  OpenMP.h  StringHelpers.h  TemplateProgramming.h  Timer.h  Workarounds.h
Tools/CommandLine/: CommandLineParser.h  ProgressBar.h
Tools/Concurrent/: NonAtomic.h  RelaxedAtomic.h
Tools/Logging/: LogManager.h  NullLogger.h
Tools/Simd/: AlignVector.h  AlignedVector.h  Avx.h  HorizontalOps.h  Sse.h
Visualization/: Color.h  GraphDrawer.h  Graphic.h  PrimitiveDrawer.h
Visualization/Graphics/: PdfGraphic.h  PngGraphic.h  SvgGraphic.h
